--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <h1 style="text-align: center;">JohnBoothFacts.com</h1>
 <h2 style="text-align: center; color: green; font-style: italic;">Facts by John, for John.</h2>
 <br><br><br>
-<h3 id="fact" style="text-align: center; color: red"></h3>
+<h3 id="fact" style="text-align: center; color: red"> </h3>
 
 
 
@@ -16,7 +16,7 @@
 var factarray = new Array(
 "The Mustang can do a standing quarter mile in under 10 seconds.",
 "The moon is actually a planet, orbiting around the earth, and the earth acts like a sun to it.",
-"Ford invented an aluminium that rusts",
+"Ford invented an aluminium that rusts.",
 "Once you have diplomatic immunity, you never actually lose it.");
 
 randomnum = Math.round(Math.random()* (factarray.length -1));
